--- a/style.css
+++ b/style.css
@@ -1034,7 +1034,7 @@ body, html {
 .end-hand-btn {
     font-size: 24px;
     padding: 15px 25px;
-    min-width: 200px;
+    min-width: 100px;
 }
 
 .end-hand-btn:disabled {
@@ -1047,9 +1047,15 @@ body, html {
 /* Settings button on Game Screen */
 .settings-button-ingame {
     position: absolute;
-    bottom: 20px;
-    left: 20px;
+    width: 100px;
+    top: 120px;
+    right: 20px;
     z-index: 50;
+}
+
+.settings-button-ingame .menu-button {
+    font-size: 12px;
+    padding:  8px;
 }
 
 .level-failed-overlay {
